feat : [3단계] 로또 (2등)  (#3672)
* feat : LottoNumber 객체와 TC 생성

* refactor : lotto를 List<Integer>가 아닌 Set<LottoNumber>로 저장하도록 로직 개선

* refactor : lotto를 List<Integer>가 아닌 Set<LottoNumber>로 저장하도록 로직 개선 (description 참고)

일부 로직의 반환 객체는 HashMap과 같은 구현체가 아닌 Map, 즉, 인터페이스 반환하도록 개선

* refactor : 반환 객체는 HashMap과 같은 구현체가 아닌 Map, 즉, 인터페이스 반환하도록 개선

* refactor : 일부 로직의 반환 객체는 HashMap과 같은 구현체가 아닌 Map, 즉, 인터페이스 반환하도록 개선

* refactor : enum에서 description 제거

* refactor : 일부 로직 수정에 따른 입력객체, 출력객체, 실행객체의 내용 수정

* test : 피드백 반영에 따른 TC 수정

* docs : readme 업데이트

* refactor : Map<Integer, Integer> winLottos -> Map<PrizeEnum, Integer>로 변경

* refactor : containsNumber 객체를 추가하여 로또 스스로가 특정 숫자를 갖고있는지 직접 판단 (description 참고)

불필요한 List<Integer> 변환 메서드는 제거

* refactor : 정밀한 수익률 판단을 위해 BigDecimal 사용

* refactor : PrizeEnum의 구조 변경 (description 참고)

매칭되는 번호 개수, 상금, 보너스 볼의 존재 여부
위의 3가지로 생성자를 변경

* refacotr : 구조 변경에 따른 입력클래스, 출력클래스, 메인 실행 클래스 수정

* test : 구조 변경에 따른 tc 수정

* docs : readme 작성

* refactor : Lotto 클래스의 로직 변경

1. String이 아닌 List<String>으로 Lotto를 생성하도록 로직 개선
2. 불필요한 toString 제거
3. 불필요한 splitNumbersByComma 제거
4. containsNumber 메서드 추가 (이렇게 해서 Lotto가 외부에서 주입된 번호를 가지고 직접 자신의 로또 번호와 매칭되는게 있는지 판단)

* chore : 로또 관련 상수 추가

* refactor : LottoNumber 생성시, 내부 인자는 Integer가 아닌 int로 변경

* refactor : ==이 아닌 .equals로 값 비교 로직 변경

* refactor : LottoWinChecker는 우승 로또의 데이터만을 내부 변수로 가짐

당첨 로또번호와 유저의 로또를 비교하여 우승 로또를 반환하는 `countMatchedWinLottos()` 메서드 생성

* refactor : 우승 번호는 String이 아닌 List<String>으로 반환

* refactor : 우승 문구 출력시, switch가 아닌 고정된 포맷으로 출력

* refactor : LottoWinChecker 로직 변경에 따른 일부 내용 수정

* test : tc 수정

* docs : readme 업데이트